--- a/Frontend/003 - UIUX/103/index.css
+++ b/Frontend/003 - UIUX/103/index.css
@@ -3,6 +3,10 @@
     src: url('./MadimiOne-Regular.ttf') format('truetype');
 }
 
+:root {
+    font-size: 1em;
+}
+
 body {
     font-family: MadimiOne, sans-serif;
     padding: 20px;
