--- a/HCM-Portfolio/index.scss
+++ b/HCM-Portfolio/index.scss
@@ -4,10 +4,60 @@
   box-sizing: border-box;
 }
 
+// Fonts
+@font-face {
+  font-family: 'OpenSans';
+  src: url('./src/fonts/OpenSans.ttf') format('true-type');
+}
+
+@font-face {
+  font-family: 'Poppins-Regular';
+  src: url('./src/fonts/Poppins-Regular.ttf') format('true-type');
+}
+
+@font-face {
+  font-family: 'Poppins-Light';
+  src: url('./src/fonts/Poppins-Light.ttf') format('true-type');
+}
+
+@font-face {
+  font-family: 'Poppins-Bold';
+  src: url('./src/fonts/Poppins-Bold.ttf') format('true-type');
+}
+
+// Typescale
+h1 {
+  font-size: 5.61rem;
+}
+
+h2 {
+  font-size: 4.209rem;
+}
+
+h3 {
+  font-size: 3.157rem;
+}
+
+h4 {
+  font-size: 2.369rem;
+}
+
+h5 {
+  font-size: 1.777rem;
+}
+
+h6 {
+  font-size: 1.333rem;
+}
+
+p {
+  font-size: 1rem;
+}
+
+small {
+  font-size: 0.75rem;
+}
+
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
-  color: #333;
-  line-height: 1.6;
-  padding: 1em;
+  font-family: Poppins-Light;
 }
