--- a/HCM-Portfolio/index.css
+++ b/HCM-Portfolio/index.css
@@ -27,6 +27,7 @@ body {
 body header nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: #22777f;
   color: #d4e8ec;
   padding: 0.5em 2em;
@@ -43,6 +44,31 @@ body header nav img.svg:hover {
 body header nav .navbar-right {
   display: flex;
   gap: 0.5em;
+}
+body .hero-section {
+  height: 30rem;
+  background-image: url("./src/public/hero.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #d4e8ec;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body .hero-section .content-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  padding: 2rem 4rem;
+  border-radius: 1.25rem;
+  background-color: #22777f;
+}
+body .hero-section .content-container .text-container {
+  text-align: center;
+}
+body .hero-section .content-container .text-container h3 {
+  font-weight: 200;
 }
 
 h1 {
