--- a/HCM-Portfolio/index.scss
+++ b/HCM-Portfolio/index.scss
@@ -39,6 +39,32 @@ body {
   font-family: 'OpenSans', sans-serif;
   color: $black;
 
+  /* Buttons */
+  a.btn-cta {
+    display: inline-block;
+    text-align: center;
+    background-color: $white;
+    padding: 1rem 2rem;
+    border-radius: 1.25rem;
+    color: $black;
+    text-decoration: none;
+    transition: background-color 0.2s;
+    box-shadow: 1px 1px 2px 0 rgba(49, 85, 94, 0.64),
+    2px 3px 4px 0 rgba(49, 85, 94, 0.55), 5px 8px 6px 0 rgba(49, 85, 94, 0.33),
+    10px 14px 7px 0 rgba(49, 85, 94, 0.1),
+    15px 21px 7px 0 rgba(49, 85, 94, 0.01);
+
+
+    &:hover {
+      background-color: $accent;
+    }
+    &:active {
+      background-color: $black;
+      color: $white;
+      box-shadow: none;
+    }
+  }
+
   header {
     nav {
       display: flex;
@@ -46,14 +72,14 @@ body {
       align-items: center;
       background-color: $main;
       color: $white;
-      padding: 0.5em 2em;
+      padding: 0.5rem 2rem;
 
       h6 {
         font-weight: 200;
       }
 
       img.svg {
-        height: 2em;
+        height: 2rem;
 
         &:hover {
           transform: scale(1.2);
@@ -62,13 +88,13 @@ body {
 
       .navbar-right {
         display: flex;
-        gap: 0.5em;
+        gap: 0.5rem;
       }
     }
   }
 
   .hero-section {
-    height: 30rem;
+    height: 50rem;
     background-image: url('./src/public/hero.webp');
     background-position: center;
     background-repeat: no-repeat;
@@ -81,17 +107,24 @@ body {
     .content-container {
       display: flex;
       flex-direction: column;
-      gap: 2em;
+      gap: 2rem;
       padding: 2rem 4rem;
       border-radius: 1.25rem;
       background-color: $main;
-      .text-container{
+      margin: 1rem;
+
+      .text-container {
         text-align: center;
-        h3{
+
+        h3 {
           font-weight: 200;
         }
       }
-   }
+    }
+
+    .btn-container {
+      text-align: center;
+    }
   }
 }
 
